--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,10 @@
 	<name>CoinDesk</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
 	<scm>
 		<connection/>
 		<developerConnection/>
 		<tag/>
-		<url/>
 	</scm>
 	<properties>
 		<java.version>1.8</java.version>
@@ -34,6 +27,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		
+		<dependency>                                        
+		    <groupId>org.springframework.boot</groupId>     
+		    <artifactId>spring-boot-starter-web</artifactId>
+		</dependency>                                       
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
