--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20240303</version>
-		</dependency>
+		<dependency>                                     
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>    
+		</dependency>                                    
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
